src/test/ui/union/union-generic.thirunsafeck.stderr
error[E0277]: the trait bound `Rc<u32>: Copy` is not satisfied
  --> $DIR/union-generic.rs:11:13
   |
LL |     let u = U { a: Rc::new(0u32) };
   |             ^ the trait `Copy` is not implemented for `Rc<u32>`
   |
note: required by a bound in `U`
  --> $DIR/union-generic.rs:6:12
   |
LL | union U<T: Copy> {
   |            ^^^^ required by this bound in `U`

error[E0277]: the trait bound `Rc<u32>: Copy` is not satisfied
  --> $DIR/union-generic.rs:13:13
   |
LL |     let u = U::<Rc<u32>> { a: Default::default() };
   |             ^^^^^^^^^^^^ the trait `Copy` is not implemented for `Rc<u32>`
   |
note: required by a bound in `U`
  --> $DIR/union-generic.rs:6:12
   |
LL | union U<T: Copy> {
   |            ^^^^ required by this bound in `U`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
